<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="text_empty" />
    <string name="text_state_complete">Completed</string>
    <string name="text_state_paid">Paid</string>
    <string name="text_state_refund">Refund</string>
    <string name="text_state_inpgoress">In Progress</string>
    <string name="text_sell">Sell</string>
    <string name="text_inventory">Inventory</string>
    <string name="text_orders">Orders</string>
    <string name="text_qty">QTY</string>
    <string name="text_add_on">Add-on</string>
    <string name="text_price">Price</string>
    <string name="text_total_refund">Total Refund</string>
    <string name="text_view_cart">View cart</string>
    <string name="text_empty_items">Empty Items!</string>
    <string name="text_error">Error!</string>
    <string name="text_retry">Retry</string>
    <string name="text_nfc_turn_off">NFC is Turned Off</string>
    <string name="text_nfc_turn_off_message">To use contactless features, NFC must be enabled on your device.</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_turn_on_nfc">Turn on NFC</string>
    <string name="text_variation">Choose Variation</string>
    <string name="text_add">Add</string>
    <string name="text_add_to_cart">Add to Cart</string>
    <string name="text_checkout">Checkout</string>
    <string name="text_cart">Cart</string>
    <string name="text_subtotal">Subtotal</string>
    <string name="text_tax">Tax</string>
    <string name="text_item">Items</string>
    <string name="text_visibility">Visibility</string>
    <string name="text_complete">Complete</string>
    <string name="text_sold">Sold</string>
    <string name="text_remaining">Inventory Remaining %</string>
    <string name="text_quantity">Quantity</string>
    <string name="text_refund">Partial Refund</string>
    <string name="text_name">Name</string>
    <string name="text_time">Time</string>
    <string name="text_order_method">Order method</string>
    <string name="text_status">Status</string>
    <string name="text_note">Note</string>
    <string name="text_view_order">View Order</string>
    <string name="text_refund_action">Refund</string>
    <string name="text_coupons_report">Coupons Report</string>
    <string name="text_cash">Cash</string>
    <string name="text_credit">Credit</string>
    <string name="text_add_customer_info">Add Customer Info</string>
    <string name="text_change"><u>Change</u></string>
    <string name="text_total">Total</string>
    <string name="text_format_total_items">%d items</string>
    <string name="text_refund_cash_amount">Refund Cash Amount : %s</string>
    <string name="text_refund_card">%1$s from card ending in %2$s will be refund to Bill Evans</string>
    <string name="text_card_info">Card Info</string>
    <string name="text_card_swiper">Card Swiper</string>
    <string name="text_card_manually">Enter Card Manually</string>
    <string name="text_comp">Comp</string>
    <string name="text_card_number">Card Number</string>
    <string name="text_place_order">Place Order for %s</string>
    <string name="text_card_summary">Card Summery</string>
    <string name="text_coupon_discount">Coupon Discount</string>
    <string name="text_face_value">Face Value</string>
    <string name="text_donation">Donation</string>
    <string name="text_service_fee">Service Fee</string>
    <string name="text_taxes">Taxes</string>
    <string name="text_back">Back</string>
    <string name="text_festival">%s  Festival Day Pass</string>
    <string name="text_tax_fees"><![CDATA[Taxs & Fees]]></string>
    <string name="text_done">Done</string>
    <string name="tickets">Tickets</string>
    <string name="text_edit_manual_card">Enter Card Manually</string>
    <string name="text_play_now">Pay Now</string>
    <string name="text_name_on_card">Name on card</string>
    <string name="text_cvv">CVV\t</string>
    <string name="text_expriry_date">Expiry Date</string>
    <string name="text_expriry_date_hint">MM/YY</string>
    <string name="text_favorites">Favorites</string>
    <string name="text_order">Order #%s</string>
    <string name="text_order_summary">Order Summary</string>
    <string name="text_loading">Loading...</string>
    <string name="text_payment">Payment</string>
    <string name="text_success">Success!</string>
    <string name="text_coupon_applied">Coupon Applied</string>
    <string name="text_coupon_code">Coupon Code</string>
    <string name="text_discount_type">Discount Type</string>
    <string name="text_discount_value">Discount Value</string>
    <string name="text_discount_amount">Discount Amount</string>
    <string name="text_empty_order">No Orders found!</string>
    <string name="text_state_cancelled">Cancelled</string>
    <string name="text_order_detail">Order Details</string>
    <string name="text_edit_quantity">Edit Quantity</string>
    <string name="text_add_new">Add New</string>
</resources>