<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ji.shop.base.blur.RoundRectBlurView
        android:id="@+id/rounded"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:allRadius="@dimen/default_radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:realtimeBlurRadius="50dp"
        app:realtimeOverlayColor="@color/colorOverlayBlur" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/large_padding" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/large_padding" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_close"
        style="@style/Widget.Material3.Button.IconButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_close"
        app:iconSize="@dimen/_32dp"
        app:iconTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv" />

    <TextView
        android:id="@+id/tv"
        style="@style/fontDemiBold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/large_2_padding"
        android:text="@string/text_edit_manual_card"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/btn_close"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintTop_toTopOf="parent" />

    <ji.shop.widget.CustomEdittext
        android:id="@+id/edt_card_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cs_hint="@string/text_card_number"
        app:cs_image_start="@drawable/ic_master_card"
        app:cs_title="@string/text_card_number"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintTop_toBottomOf="@id/tv" />

    <ji.shop.widget.CustomEdittext
        android:id="@+id/edt_name_on_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_padding"
        app:cs_hint="@string/text_name_on_card"
        app:cs_title="@string/text_name_on_card"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintTop_toBottomOf="@id/edt_card_number" />

    <ji.shop.widget.CustomEdittext
        android:id="@+id/edt_expiry_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_padding"
        app:cs_hint="@string/text_expriry_date_hint"
        app:cs_title="@string/text_expriry_date"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintTop_toBottomOf="@id/edt_name_on_card" />

    <ji.shop.widget.CustomEdittext
        android:id="@+id/edt_cvv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_padding"
        app:cs_hint="@string/text_cvv"
        app:cs_title="@string/text_cvv"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintTop_toBottomOf="@id/edt_expiry_date" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_play_now"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/large_2_padding"
        android:layout_marginEnd="@dimen/large_padding"
        android:text="@string/text_play_now"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_image"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintTop_toBottomOf="@id/edt_cvv" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_camera"
        app:iconGravity="textStart"
        app:iconTint="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@id/btn_play_now"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:layout_constraintStart_toEndOf="@id/btn_play_now" />
</androidx.constraintlayout.widget.ConstraintLayout>