<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    app:cardBackgroundColor="@color/colorSecondaryBackground"
    app:cardCornerRadius="6dp"
    app:cardElevation="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:minHeight="50dp">

        <TextView
            android:id="@+id/tv_qty"
            style="@style/fontSemiBold"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:background="#5E6968"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/small_padding"
            tools:text="@string/text_qty" />

        <TextView
            android:id="@+id/tv_name"
            style="@style/fontSemiBold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/small_padding"
            android:layout_weight="2"
            android:lines="2"
            android:paddingStart="@dimen/small_padding"
            android:text="@string/text_add_on" />

        <TextView
            android:id="@+id/tv_price"
            style="@style/fontSemiBold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="@dimen/small_padding"
            android:text="@string/text_price" />

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorFourthBackground">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:background="@drawable/bg_stroke_secondary"
                android:gravity="center_vertical"
                android:paddingHorizontal="@dimen/small_padding">

                <TextView
                    android:id="@+id/tv_value"
                    style="@style/fontSemiBold"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    tools:text="Text" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_arrow_down" />
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>