<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ji.shop.base.blur.RoundRectBlurView
        android:id="@+id/rounded"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:allRadius="@dimen/default_radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:realtimeBlurRadius="50dp"
        app:realtimeOverlayColor="@color/colorOverlayBlur" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/large_padding" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/large_padding" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_back"
        style="@style/Widget.Material3.Button.IconButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_back"
        app:iconSize="@dimen/_32dp"
        app:iconTint="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv"
        style="@style/fontDemiBold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_card_info"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintTop_toBottomOf="@+id/btn_back" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcvCardMethod"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintEnd_toEndOf="@+id/guide_end"
        app:layout_constraintTop_toBottomOf="@+id/tv"
        app:spanCount="2"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv1"
        style="@style/fontDemiBold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_card_info"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintTop_toBottomOf="@+id/rcvCardMethod" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_place_order"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/large_2_padding"
        android:text="@string/text_place_order"
        app:layout_constraintTop_toBottomOf="@+id/tv1"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:layout_constraintStart_toStartOf="@+id/guide_start" />

    <TextView
        android:id="@+id/tv2"
        style="@style/fontDemiBold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_card_summary"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintTop_toBottomOf="@+id/btn_place_order" />

</androidx.constraintlayout.widget.ConstraintLayout>